@@ -14,3 +14,5 @@
 #2\footnote{\texttt{#1}}%
 }%
 \fi\endgroup%
+
+\input{common/version.tex}
