@@ -1,7 +1,7 @@
 \begin{document}
 
 \frontmatter
-\title{GLIMMER Documentation}
+\title{GLIMMER {\glimmerver} Documentation}
 \author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk}, Ian
   Rutt\thanks{I.C.Rutt@bristol.ac.uk} and Tony Payne\thanks{A.J.Payne@bristol.ac.uk}}
 \maketitle
