@@ -1,4 +1,4 @@
-EXTRA_DIST = eis_varlist.tex glide_varlist.tex glint_varlist.tex intro.tex paramfiles.tex varlist.tex drivers.tex  example.tex \
+EXTRA_DIST = eis_varlist.tex glide_varlist.tex glint_varlist.tex intro.tex varlist.tex drivers.tex  example.tex \
              glide.tex glimmer_api.tex installation.tex ug.tex varlist.tex.in glint.tex glint_api.tex mbals.tex glum_api.tex glide_api.tex \
              visualisation.tex
 
