@@ -3,7 +3,7 @@
 \usepackage{color}
 \usepackage[colorlinks=true,citecolor=blue,dvipdfm]{hyperref}
 \input{common/definitions.tex}
-\special{pdf: docinfo << /Author (Magnus Hagdorn and Ian Rutt) /Title (GLIMMER 0.6 User Documentation) >>}
+\special{pdf: docinfo << /Author (Magnus Hagdorn and Ian Rutt) /Title (GLIMMER User Documentation) >>}
 
 
 \input{ug.tex}
